--- a/src/components/functions/navigationBlock/navigationBlock.module.css
+++ b/src/components/functions/navigationBlock/navigationBlock.module.css
@@ -1,7 +1,7 @@
 .navigationBlock {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   padding: 10px;
   margin: 0;
