--- a/src/components/functions/linkBlock/linkBlock.module.css
+++ b/src/components/functions/linkBlock/linkBlock.module.css
@@ -29,7 +29,10 @@
 }
 
 .listItem span {
+  display: flex;
+  justify-content: space-between;
   padding-bottom: 10px;
+  width: 100%;
   margin: 0;
   width: auto;
   border-bottom: 1px solid #e0e0e0;
@@ -46,9 +49,9 @@
 }
 .listItem:hover span {
   display: flex;
+  justify-content: space-between;
   padding-bottom: 10px;
   margin: 0;
-  justify-content: center;
   text-align: center;
   width: 100%;
 }
