--- a/src/components/functions/navigationBlock/navigationBlock.module.css
+++ b/src/components/functions/navigationBlock/navigationBlock.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 10px;
   margin: 0;
-  border-radius: 15px;
+  border-radius: 0.25rem;
   min-width: 300px;
   font-size: 1.5rem;
   border: 1px solid #e0e0e0;
