--- a/src/components/ui/elementWrapper/elementWrapper.module.css
+++ b/src/components/ui/elementWrapper/elementWrapper.module.css
@@ -9,6 +9,6 @@
   width: 100%;
   border: 1px solid #e0e0e0;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 0.25rem;
   box-shadow: 0px 0.8px 2px rgba(0,0,0,.032), 0px 2.7px 6.7px rgba(0,0,0,.048), 0px 12px 30px rgba(0,0,0,.08);
 }
