--- a/src/components/functions/navigationBlock/navigationBlock.module.css
+++ b/src/components/functions/navigationBlock/navigationBlock.module.css
@@ -1,6 +1,8 @@
 .navigationBlock {
   display: flex;
   flex-direction: column;
+  position: sticky;
+  top: 0;
   /* justify-content: center; */
   align-items: center;
   padding: 10px;
@@ -10,6 +12,18 @@
   font-size: 1.5rem;
   border: 1px solid #e0e0e0;
   max-height: 40vh;
+  overflow-y: auto;
+  z-index: 100;
+}
+
+.navigationBlock::-webkit-scrollbar {
+  width: 5px;
+  background: #fff9;
+}
+
+.navigationBlock::-webkit-scrollbar-thumb {
+  background: #e0e0e0;
+  border-radius: 5px;
 }
 
 .header {
