--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,17 @@ body {
   background-color: #f0f0f0;
 }
 
+body::-webkit-scrollbar {
+  width: 5px;
+  background: #fff9;
+}
+
+
+body::-webkit-scrollbar-thumb {
+  background: #e0e0e0;
+  border-radius: 5px;
+}
+
 #root {
   max-width: 90rem;
   height: 100%;
